feat: add css menu

--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
 
                     <li>
                         <a href="#about" class="nav-link scrollto">
-                            <i class=""></i>
+                            <i class="bx bx-user"></i>
                             <span>Sobre</span>
                         </a>
                     </li>
 
                     <li>
                         <a href="#resumo" class="nav-link scrollto">
-                            <i class="bx bx-bool-content"></i>
+                            <i class="bx bx-file-blank"></i>
                             <span>Resumo</span>
                         </a>
                     </li>
@@ -91,14 +91,14 @@
                     
                     <li>
                         <a href="#services" class="nav-link scrollto">
-                            <i class="bx bx-bool-server"></i>
+                            <i class="bx bx-server"></i>
                             <span>Serviços</span>
                         </a>
                     </li>
 
                     <li>
                         <a href="#contact" class="nav-link scrollto">
-                            <i class="bx bx-whatsapp"></i>
+                            <i class="bx bx-envelope"></i>
                             <span>Contato</span>
                         </a>
                     </li>
@@ -108,7 +108,8 @@
                 </ul>
             </div>
         </div>
-    </header>
+    </header> 
+    <!-- End Header -->
 
         <p class="">Bem-vindo à Hop Haven Co.!
 
