--- a/index.html
+++ b/index.html
@@ -106,6 +106,18 @@
             </div>
         </div>
     </header> 
+
+    <section id="hero" class="d-flex flex-column justify-content-center">
+        <div class="hero-container" data-aos="fade-ind">
+            <h1> Hop Haven Co. </h1>
+            <p> Onde o lúpulo encontra 
+                <span class="typed" data-typed-items="seu santuário.">
+
+                </span>
+            </p>
+        </div>
+    </section>
+
     <!-- End Header -->
 
        <!--  <p class="">Bem-vindo à Hop Haven Co.!
