update hero end

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
     </header> 
 
-    <section id="hero" class="d-flex flex-column justify-content-center">
+    <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
         <div class="hero-container" data-aos="fade-ind">
             <h1> Hop Haven Co. </h1>
             <p> Onde o lúpulo encontra 
