--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
         </div>
     </section>
 
+    <main id="main">
+
+    </main>
+
+    <footer id="footer">
+
+    </footer>
+
     <!-- End Header -->
 
        <!--  <p class="">Bem-vindo à Hop Haven Co.!
