--- a/index.html
+++ b/index.html
@@ -120,18 +120,23 @@
     </section>
 
     <main id="main">
-        <div id="about" class="about">
+        <section id="about" class="about">
             <div class="container">
+
                 <div class="section-title">
-                    <h2>Sobre Nós</h2>
-                    <p> Somos apaixonados por cerveja e pelo mundo do lúpulo. Na HopHaven, dedicamos nossos esforços a
-                        criar um santuário para os amantes da cerveja, um lugar onde a arte da fabricação de cerveja se
+                    <h2> Sobre </h2>
+                    <p> Somos apaixonados por cerveja e pelo mundo do lúpulo. Na HopHaven, dedicamos nossos
+                        esforços a
+                        criar um santuário para os amantes da cerveja, um lugar onde a arte da fabricação de
+                        cerveja se
                         encontra com a paixão pela qualidade e sabor.
-                        Em nossa jornada, buscamos incessantemente a excelência, desde a seleção dos melhores lúpulos
+                        Em nossa jornada, buscamos incessantemente a excelência, desde a seleção dos melhores
+                        lúpulos
                         até a cuidadosa elaboração de cada lote de cerveja. Nosso compromisso com a qualidade é
                         refletido em cada gole de nossas cervejas artesanais.
                         Na HopHave, não somos apenas uma cervejaria; somos uma comunidade de entusiastas que
-                        compartilham a mesma visão: criar experiências sensoriais únicas através de sabores ricos e
+                        compartilham a mesma visão: criar experiências sensoriais únicas através de sabores
+                        ricos e
                         nuances complexas.
                         Junte-se a nós nesta jornada cervejeira e descubra um refúgio onde a qualidade é nossa
                         prioridade, a paixão é nossa força motriz e o lúpulo é rei.
@@ -143,52 +148,139 @@
                 <div class="row">
                     <div class="col-lg-4" data-aos="fade-right">
                         <img class="img-fluid" src="img/logo1.png" alt="">
+                    </div>
 
-                        <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-                            <h3>Fabricação de cerveja de alta qualidade.</h3>
+                    <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+                        <h3>Fabricação de cerveja de alta qualidade.</h3>
 
-                            <p class="fst-italic">Desgute do que a de Melhor</p>
-                        </div>
+                        <p class="fst-italic">
+                            Loja especializada em vendas de Consoles, Jogos, Video Games e Acessórios.
+                        </p>
 
                         <div class="row">
                             <div class="col-lg-6">
                                 <ul>
                                     <li>
-                                        <i class="bi bi-building"></i>
-                                        <strong> Inagurado em:</strong>
-                                        <span>2024</span>
+                                        <i class="bi bi-calendar-date"> </i>
+                                        <strong>Data Inauguração: </strong>
+                                        <span> 16 de Abril de 2024 </span>
                                     </li>
 
                                     <li>
-                                        <i class="bi bi-globe"></i>
-                                        <strong>Nosso Site:</strong>
-                                        <span>https://google.com.br</span>
+                                        <i class="bi bi-globe"> </i>
+                                        <strong> Site: </strong>
+                                        <span>
+                                            guuhferiani.github.io/ferianistore
+                                        </span>
                                     </li>
-
                                 </ul>
                             </div>
-                        </div>
+
+                            <div class="col-lg-6">
+                                <ul>
+                                    <li>
+                                        <i class="bi bi-calendar-date"> </i>
+                                        <strong>Data Inauguração: </strong>
+                                        <span> 16 de Abril de 2024 </span>
+                                    </li>
+
+                                    <li>
+                                        <i class="bi bi-globe"> </i>
+                                        <strong> Site: </strong>
+                                        <span>
+                                            guuhferiani.github.io/ferianistore
+                                        </span>
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <div class="col-lg-6">
+                                <ul>
+                                    <li>
+                                        <i class="bi bi-calendar-date"> </i>
+                                        <strong>Data Inauguração: </strong>
+                                        <span> 16 de Abril de 2024 </span>
+                                    </li>
+
+                                    <li>
+                                        <i class="bi bi-globe"> </i>
+                                        <strong> Site: </strong>
+                                        <span>
+                                            guuhferiani.github.io/ferianistore
+                                        </span>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div> <!-- Fim row -->
+                    </div>
+                </div> <!-- fim ROW -->
+                <p>Somos a maior loja especializada em Cerveas artesanais</p>
+            </div>
+        </section>
+    </main>
+
+    <section id="factor">
+        <div class="container">
+            <div class="section-title">
+                <h2>Premios</h2>
+                <p></p>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
+                    <div class="count-box">
+                        <i></i>
+                        <span></span>
+                        <p><strong></strong></p>
+                    </div>
+                </div>
+                
+                <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
+                    <div class="count-box">
+                        <i></i>
+                        <span></span>
+                        <p><strong></strong></p>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
+                    <div class="count-box">
+                        <i></i>
+                        <span></span>
+                        <p><strong></strong></p>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
+                    <div class="count-box">
+                        <i></i>
+                        <span></span>
+                        <p><strong></strong></p>
                     </div>
                 </div>
             </div>
         </div>
-    </main>
+    </section>
+
+    <a class="back-to-top d-flex align-items-center justify-content-center" href="">
+        <i class="bi bi-arrow-up-short"></i>
+    </a>
+
 
     <footer id="footer">
 
     </footer>
 
 
+    <script src="bootstrap/aos/aos.js"></script>
+    <script src="bootstrap/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="bootstrap/glightbox/js/glightbox.min.js"></script>
+    <script src="bootstrap/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="bootstrap/purecounter/purecounter_vanilla.js"></script>
+    <script src="bootstrap/swiper/swiper-bundle.min.js"></script>
+    <script src="bootstrap/typed.js/typed.umd.js"></script>
+
+    <script src="js/main.js"></script>
 </body>
-
-<script src="bootstrap/aos/aos.js"></script>
-<script src="bootstrap/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="bootstrap/glightbox/js/glightbox.min.js"></script>
-<script src="bootstrap/isotope-layout/isotope.pkgd.min.js"></script>
-<script src="bootstrap/purecounter/purecounter_vanilla.js"></script>
-<script src="bootstrap/swiper/swiper-bundle.min.js"></script>
-<script src="bootstrap/typed.js/typed.umd.js"></script>
-
-<script src="js/main.js"></script>
 
 </html>
