--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                 <i class="bi bi-instagram"></i>
               </div>
               <h4 class="title"> Cervejas  🍺</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+              <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
 
             <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
@@ -695,7 +695,7 @@
                 <i class="bi bi-instagram"></i>
               </div>
               <h4 class="title"> Cervejas  🍺</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+              <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             
 
@@ -704,7 +704,7 @@
                 <i class="bi bi-instagram"></i>
               </div>
               <h4 class="title"> Cervejas  🍺</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+              <p class="description"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             
 
