add section testimonials

--- a/index.html
+++ b/index.html
@@ -396,8 +396,8 @@
       </section>
 
       <section id="resume" class="resume">
-        <!-- <div class="container">
-          <div class="section-title">
+        <div class="container">
+        <!--   <div class="section-title">
             <h2>Quem Somos</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
@@ -711,6 +711,74 @@
           </div>
         </div>
       </section>
+
+      <section id="testimonials" class="testimonials section-bg">
+        <div class="container">
+          <div class="section-title">
+            <h2>Depoimentos</h2>
+            <p>Lorem ipsum, dolor sit amet conse</p>
+          </div>
+
+          <div class=".testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
+            <div class="swiper-wrapper">
+
+              <div class="swiper-slide">
+                <div class="testimonial-item" data-aos="fade-up">
+                  <p> <i class="bx bxs-quote-alt-left quote-icon-left"></i> 
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    <i class="bx bxs-quote-alt-right quote-icon-right"></i> 
+                  </p>
+
+                  <img class="testimonial-img" src="img/depoimentos/depoimento-1.jpg" alt="">
+                  <h4>Saul</h4>
+                  <h4>DBA</h4>
+                </div>
+              </div>    <!-- fim swiper  -->
+ 
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+
+
+    <!--   
+      <section id="depoimentos" class="depoimentos section-bg">
+        <div class="container">
+
+            <div class="section-title">
+                <h2> Depoimentos </h2>
+                <p> Conteúdo sobre as Avaliações/ Depoimentos / Feedbacks </p>
+            </div>
+
+            <div class="depoimentos-slider swiper" data-aos="fade-up" data-aos-delay="100">
+
+                <div class="swiper-wrapper">
+
+                    <div class="swiper-slide">
+                        <div class="depoimento-item" data-aos="fade-up">
+
+                            <p>
+                                <i class="bx bxs-quote-alt-left quote-icon-left"> </i>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem animi modi.
+                                <i class="bx bxs-quote-alt-right quote-icon-right"> </i>
+                            </p>
+
+                            <img src="img/depoimentos/depoimento-1.jpg" alt="">
+
+
+
+                        </div>
+                    </div>
+
+
+                </div> 
+
+            </div>
+        </div>
+    </section> -->
+
     </main>
     <!-- fim conteudo Principal -->
 
