--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     </div>
   </section>
   <!-- fim hero -->
+   
   <main id="main">
     <section id="sobre" class="sobre">
       <div class="container">
@@ -637,14 +638,87 @@
                 <img class="depoimento-img" src="img/depoimentos/depoimento-1.jpg" alt="">
               </div>
             </div>
+          </div>
 
-            <div class="swiper-paginaion">
+          <div class="swiper-paginaion"></div>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact" class="contact">
+      <div class="container">
+         <div class="section-title">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem animi modi.
+            </p>
+         </div>
+
+         <div class="row" data-aos="fade-in">
+          <div class="col-lg-5 d-flex align-items-stretch">
+            <div class="info">
+
+              <div class="address">
+                <i class="bi bi-geo-alt-fill"></i>
+                <h4>Endereço: Sao Paulo, 81 - SP</h4>
+                <p></p>
+              </div>
+
+              <div class="email">
+                <i class="bi bi-envelope"></i>
+                <h4>Email: tee@gmail.com</h4>
+                <p></p>
+              </div>
+
+              <div class="cellphone">
+                <i class="bi bi-geo-alt-fill"></i>
+                <h4>Telefone: 11 4445-5555</h4>
+                <p></p>
+              </div>
+
+              <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.2218594795995!2d-46.660709424669825!3d-23.560474078800436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59cc32290ce7%3A0x1dd2698085312c92!2sAv.%20Paulista%2C%201811%20-%20Bela%20Vista%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001311-200!5e0!3m2!1spt-BR!2sbr!4v1718144810894!5m2!1spt-BR!2sbr" 
+                width="600" 
+                height="450" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade">
+              </iframe>
 
             </div>
-            
           </div>
-        </div>
 
+          <div class="col-lg-7 mt-5 mt-lg-0 d-flex">
+            <form action="" method="post" class="email-form">
+              <div class="row">
+                <div class="grupo-form col-md-6">
+                  <label for="name">Digite seu nome:</label>
+                  <input type="text" name="name" id="name" class="form-control" placeholder="" required>
+                </div>
+
+                <div class="grupo-form col-md-6">
+                  <label for="email">Seu email:</label>
+                  <input type="text" name="email" id="email" class="form-control" placeholder="email@gmail.com" required>
+                </div>
+
+                <div class="grupo-form col-md-6">
+                  <label for="name">Assunto:</label>
+                  <input type="text" id="assunto" class="form-control">
+                </div>
+
+                <div class="grupo-form col-md-6">
+                  <label for="mensagem">Digite sua Mensagem:</label>
+                  <textarea name="mensagem" class="form-control" id="mensagem" rows="10"></textarea>
+                </div>
+
+                <div class="text-center">
+                  <button type="submit">Enviar</button>
+                </div>
+
+              </div> <!-- Fim row -->
+
+            </form>
+          </div>
+         </div>
       </div>
     </section>
 
@@ -672,6 +746,6 @@
 
   <!-- JS Principal -->
   <script src="js/main.js"></script>
-</body>
 
+</body>
 </html>
