feat: add css address

--- a/index.html
+++ b/index.html
@@ -636,6 +636,9 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"> </i>
                 </p>
                 <img class="depoimento-img" src="img/depoimentos/depoimento-1.jpg" alt="">
+                <h3>Ragnar</h3>
+                <h4>Desgutador</h4>
+
               </div>
             </div>
           </div>
@@ -722,12 +725,21 @@
       </div>
     </section>
 
-
   </main>
   <!-- fim conteudo Principal -->
 
   <!-- roda pe -->
-  <footer id="footer"></footer>
+  <footer id="footer">
+    <div class="container">
+        <div class="copyright">
+            &copy; Copyright. <strong><span> Portfolio Hop Haven </span></strong>
+        </div>
+        <div class="creditos">
+            Desenvolvido por <i class="bi bi-github"></i>
+            <a href="https://github.com/guuhferiani" target="_blank"> Timoteo </a>
+        </div>
+    </div>
+  </footer>
 
   <!-- Botao back-to-top -->
   <a class="back-to-top d-flex align-items-center justify-content-center" href="#">
