--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
     <section id="contact" class="contact">
       <div class="container">
          <div class="section-title">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem animi modi.
+            <p> Venha nos visitar
             </p>
          </div>
 
@@ -679,8 +679,8 @@
 
               <iframe 
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.2218594795995!2d-46.660709424669825!3d-23.560474078800436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59cc32290ce7%3A0x1dd2698085312c92!2sAv.%20Paulista%2C%201811%20-%20Bela%20Vista%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001311-200!5e0!3m2!1spt-BR!2sbr!4v1718144810894!5m2!1spt-BR!2sbr" 
-                width="600" 
-                height="450" 
+                width="100%" 
+                height="320px" 
                 style="border:0;" 
                 allowfullscreen="" 
                 loading="lazy" 
