feat:  update img

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <h1>Hop Haven Co.</h1>
       <p>
         Onde o lúpulo encontra
-        <span class="typed" data-typed-items="seu santuári "> </span>
+        <span class="typed" data-typed-items="seu santuário "> </span>
       </p>
     </div>
   </section>
