--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1 class="text-light">Hop Haven 🍺</h1>
 
         <div class="social-links mt-3 text-center">
-          <a href="#" class="instagram" target="_blank">
+          <a href="details.html" class="instagram" target="_blank">
             <i class="bx bxl-instagram"> </i>
           </a>
           <a href="#" class="facebook" target="_blank">
