feat: add css for details

--- a/details.html
+++ b/details.html
@@ -110,8 +110,33 @@
             <li>
               <a href="index.html">Home</a>
             </li>
-            <li>Cervejas</li>
+            <li> Detalhes dos Produtos</li>
           </ol>
+        </div>
+      </div>
+    </section>
+
+    <section id="portfolio-details" class="portfolio-details">
+      <div class="container">
+        <div class="row gy-4">
+          <div class="col-lg-8">
+            <div class="portfolio-details-slider swiper">
+              <div class="swiper-wrapper align-items-center">
+                <div class="swiper-slide">
+                  <img src="img/cerveja.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="img/cerveja.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="img/cerveja.png" alt="">
+                </div>
+              </div>
+
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -120,19 +145,7 @@
 
   </main>
 
-  <!-- seção hero -->
-  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <div class="hero-container" data-aos="fade-in">
-      <h1>Hop Haven Co.</h1>
-      <p>
-        Onde o lúpulo encontra
-        <span class="typed" data-typed-items="seu santuário "> </span>
-      </p>
-    </div>
-  </section>
-  <!-- fim hero -->
 
-  <!-- fim conteudo Principal -->
 
   <!-- roda pe -->
   <footer id="footer">
