fea:  add aside info

--- a/details.html
+++ b/details.html
@@ -134,9 +134,24 @@
                   <img src="img/cerveja.png" alt="">
                 </div>
               </div>
-
             </div>
           </div>
+
+          <aside class="col-lg-4"> <!--  Conteudo ao lado -->
+            <div class="portfolio-info">
+              <h3>Veja os beneficios</h3>
+              <ul>
+                <li><strong>Categoria</strong></li>
+                <li><strong>Informaçoes</strong></li>
+              </ul>
+            </div>
+
+            <div class="portfolio-description">
+              <h3>Informaçoes Basicas</h3>
+              <p>testestesteste</p>
+            </div>
+          </aside>
+          
         </div>
       </div>
     </section>
