feat: add css for section details

--- a/details.html
+++ b/details.html
@@ -134,6 +134,9 @@
                   <img src="img/cerveja.png" alt="">
                 </div>
               </div>
+
+              <div class="swiper-pagination"></div>
+
             </div>
           </div>
 
@@ -151,7 +154,7 @@
               <p>testestesteste</p>
             </div>
           </aside>
-          
+
         </div>
       </div>
     </section>
