--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                 <a href="img/portfolio/ps5-2.jpg" class="portfolio-lightbox" data-gallery="portfolioGallery" title="">
                   <i class="bx bx-plus"> </i>
                 </a>
-                <a href="detalhes.html" title="Mais informações">
+                <a href="details.html" title="Mais informações">
                   <i class="bx bx-link"> </i>
                 </a>
               </div>
@@ -501,7 +501,7 @@
             <div class="portfolio-wrap">
               <img class="img-fluid" src="img/portfolio/ps5-2.jpg" alt="" />
               <div class="portfolio-links">
-                <a href="img/portfolio/ps5-2.jpg" class="portfolio-lightbox" data-gallery="portfolioGallery" title="">
+                <a href="img/img-capa.jpg" class="portfolio-lightbox" data-gallery="portfolioGallery" title="">
                   <i class="bx bx-plus"> </i>
                 </a>
                 <a href="detalhes.html" title="Mais informações">
