fea: add img beers

--- a/bock.html
+++ b/bock.html
@@ -107,7 +107,7 @@
 
           <aside class="col-lg-4"> <!--  Conteudo ao lado -->
             <div class="portfolio-info">
-              <h3>Veja os beneficios</h3>
+              <h3>Cerveja Bock</h3>
               <ul>
                 <li><strong>Categoria</strong></li>
                 <li><strong>Informaçoes</strong></li>
@@ -116,10 +116,8 @@
 
             <div class="portfolio-description">
               <h3>Informaçoes Basicas</h3>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde maxime quos, eaque 
-                voluptatem eos molestiae explicabo 
-                exercitationem labore deserunt  incidunt recusandae quidem pariatur maiores ratione 
-                perferendis eum aliquam deleniti tempora!
+              <p>A Bock tradicional é uma cerveja escura, adocicada, levemente lupulada e com coloração que pode variar do cobre claro ao castanho.
+                Outra característica da Bock é seu abundante e persistente colarinho. O aroma desse estilo é maltado e sabor com bastante presença de caramelo.
               </p>
             </div>
           </aside>
