--- a/paleale.html
+++ b/paleale.html
@@ -107,7 +107,7 @@
 
           <aside class="col-lg-4"> <!--  Conteudo ao lado -->
             <div class="portfolio-info">
-              <h3>Veja os beneficios</h3>
+              <h3>Pale Ale: A cerveja encorpada.</h3>
               <ul>
                 <li><strong>Categoria</strong></li>
                 <li><strong>Informaçoes</strong></li>
@@ -116,10 +116,9 @@
 
             <div class="portfolio-description">
               <h3>Informaçoes Basicas</h3>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde maxime quos, eaque 
-                voluptatem eos molestiae explicabo 
-                exercitationem labore deserunt  incidunt recusandae quidem pariatur maiores ratione 
-                perferendis eum aliquam deleniti tempora!
+              <p>A English Pale Ale da Masterpiece é uma cerveja encorpada e suave. 
+                Seus aromas trazem notas de panificação, biscoito e mel. No paladar apresenta tons maltados e
+                um amargor moderado de seus lúpulos ingleses.
               </p>
             </div>
           </aside>
