--- a/pilsen.html
+++ b/pilsen.html
@@ -107,7 +107,7 @@
 
           <aside class="col-lg-4"> <!--  Conteudo ao lado -->
             <div class="portfolio-info">
-              <h3>Veja os beneficios</h3>
+              <h3>Pilsen: a cerveja leve.</h3>
               <ul>
                 <li><strong>Categoria</strong></li>
                 <li><strong>Informaçoes</strong></li>
@@ -116,10 +116,9 @@
 
             <div class="portfolio-description">
               <h3>Informaçoes Basicas</h3>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde maxime quos, eaque 
-                voluptatem eos molestiae explicabo 
-                exercitationem labore deserunt  incidunt recusandae quidem pariatur maiores ratione 
-                perferendis eum aliquam deleniti tempora!
+              <p>A cerveja Pilsen é uma das mais populares do mundo. Possui cor dourada, espuma branca e é bastante refrescante. 
+                Original da Boêmia (atual República Tcheca), começou a ser produzida no século XIX, tendo como característica marcante a
+                 produção com leveduras de baixa fermentação.
               </p>
             </div>
           </aside>
@@ -127,9 +126,6 @@
         </div>
       </div>
     </section>
-
-
-
   </main>
 
 
