feat: add img beers

--- a/pilsen.html
+++ b/pilsen.html
@@ -88,7 +88,7 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide">
-                  <img src="img/cerveja.png" alt="">
+                  <img src="img//pilsem-img.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
