--- a/paleale.html
+++ b/paleale.html
@@ -88,7 +88,7 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide">
-                  <img src="img/cerveja.png" alt="">
+                  <img src="img/paleale-img.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
